[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Menus/LobbyPlayerMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/Textures/CharacterSelectDisabled.png" type="Texture" id=2]
[ext_resource path="res://Game/Menus/Textures/HostCrown.png" type="Texture" id=3]
[ext_resource path="res://Game/Menus/Fonts/UbuntuMono-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Game/Players/Mario/Textures/Stand/stand_01.png" type="Texture" id=5]
[ext_resource path="res://Game/Menus/Textures/NextCharacter.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 12
outline_size = 1
outline_color = Color( 0.533333, 0.505882, 0.188235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings", "font_data" ]

[sub_resource type="GDScript" id=2]

script/source = "extends TextureRect

onready var start_pos = rect_position

var accumulator = 0.0

func _process(delta):
	accumulator += 5 * delta
	rect_position.y = start_pos.y + cos(accumulator) * 3"

[node name="LobbyPlayerMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -48.0
margin_top = -48.0
margin_right = 35.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
host = false
joined = false
self_player = false

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 84.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="HostCrown" type="TextureRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = -8.0
margin_right = 85.0
margin_bottom = -4.0
rect_rotation = 45.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="PlayerName" type="Label" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = 76.0
margin_right = 81.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Player #1"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_fonts/font" ]

[node name="CharacterSprite" type="TextureRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 4

[node name="NextCharacterLeft" type="TextureRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 48.0
margin_right = 26.0
margin_bottom = 61.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
script = SubResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="NextCharacterRight" type="TextureRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 48.0
margin_right = 90.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
script = SubResource( 2 )

